# PUT_Dance-Of-Colors-gameIE

./: CMakeLists.txt  Makefile  README.md  app  eval "$(ssh-agent -s)".pub  main.cpp
Dance Of Colors/: .ninja_deps  .ninja_log  CMakeCache.txt  SFML_Gra.ilk  build.ninja  cmake_install.cmake
Dance Of Colors/.cmake/api/v1/reply/: cache-v2-f58bc93877993c30d7b6.json  cmakeFiles-v1-ba0a95f4f4bce0491438.json  codemodel-v2-aad96e815338a1bc21ba.json  index-2026-06-16T00-32-35-0862.json  target-SFML_Gra-RelWithDebInfo-c0f2bd6eaf099068a186.json  target-SFML__Audio-RelWithDebInfo-58b3dd2da0f1499d96cb.json  (+3 more)
Dance Of Colors/CODES/: main.cpp
Dance Of Colors/CODES/scripts/area/: area.h
Dance Of Colors/CODES/scripts/boss/: boss.cpp  boss.h  bossAttack.h
Dance Of Colors/CODES/scripts/interface/: interface.cpp
Dance Of Colors/CODES/scripts/player/: player.cpp
Dance Of Colors/assets/: air.ase  background.frag  boss_air_drop.ase  boss_air_shot.ase  boss_earth_laser.ase  boss_fire_floor.ase  boss_fire_meteor.ase
DanceOfColors/: CMakeLists.txt  main.cpp  sshagent
DanceOfColors/Game/area/: area.cpp  area.h
DanceOfColors/Game/interface/: interface.cpp  interface.h
DanceOfColors/Game/player/: player.cpp
DanceOfColors/Game/player/movement/: movement.cpp  movement.h
Game/assets/: boss_air_slash.ase  boss_earth_rock.ase  boss_fire_drop.ase  boss_water_bubble.ase  ground.ase  ground_background.ase
Game/interface/: interface.cpp
Game/interface/score/clock/: clock.cpp  clock.h
Game/player/: player.cpp  player.h
Game/player/sprites/: CloakMesh.cpp  CloakMesh.h
Game/scripts/animation/: animation.h
Game/scripts/area/: area.cpp
Game/scripts/boss/: boss.cpp  boss.h  bossAttack.h
Game/scripts/interface/: interface.h
Game/scripts/player/: player.cpp  player.h
Game/scripts/player/movement/: movement.h
Game/scripts/player/projectiles/: projectile.cpp  projectile.h
Game/scripts/player/sprites/: CloakMesh.cpp  CloakMesh.h
assets/: air_background.ase  boss_earth_shot.ase
(+2 files in other folders)
